using a supplier builder